# ml-train

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: build-ios.yml
ios/BenchmarkApp/: BenchmarkAppApp.swift  BenchmarkServer.swift  CameraDetectionView.swift  CameraManager.swift  ContentView.swift  Info.plist  ModelBenchmark.swift  project.yml
src/: __init__.py  baseline_detection.py  coreml_export.py  export.py  latency.py  models.py  nas.py  search_space.py  train.py
src/detect/: __init__.py  augment.py  cli.py  data.py  eval.py  loss.py  models.py  train.py
tests/: test_coreml_export.py  test_detect_augment.py  test_detect_data.py  test_detect_eval.py  test_detect_loss.py  test_detect_models.py  test_detect_train.py  test_export.py  test_latency.py  test_models.py  test_nas.py  test_search_space.py  test_train.py
